nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # deployment name
  name: nginx-deployment
  labels:
    app: nginx
# specification for the deployment
spec:
  replicas: 1
  selector:
    # select all pods with "app: nginx" key/value labels
    # ensures "app: nginx" pods belong to the deployment
    matchLabels:
      app: nginx
  # blueprint for the pod
  template:
    metadata:
      labels:
        app: nginx
    # specification for the pod
    spec:
      containers:
        - name: nginx
          image: nginx:1.16
          ports:
            - containerPort: 80
