mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  labels:
    app: mongo-express-depl
spec:
  replicas: 1
  selector: # matches Pods that have `app: mongo-express` label
    matchLabels:
      app: mongo-express
  template: # blueprint for Pods
    metadata:
      labels: # sets label on Pods that Deployment selector uses to find them
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
# Internal service to use with an Ingress
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-internal-service
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
# External service to allow external access
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-external-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer # this makes the service external and assigns external IP address
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081 # this external port must be between 30000-32767
